--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,10 +7,13 @@ provisioner:
 
 platforms:
   - name: ubuntu-12.04
-  - name: centos-6.4
+  - name: ubuntu-14.04
+    driver_config:
+      box: trusty-server-cloudimg
+      box_url: https://cloud-images.ubuntu.com/vagrant/trusty/current/trusty-server-cloudimg-amd64-vagrant-disk1.box
 
 suites:
-  - name: default
+  - name: server
     run_list:
-      - recipe[seafile::default]
+      - recipe[seafile::server]
     attributes:
